# G.P.U-PathTracer

./: .gitignore  .gitmodules  CGCanvas.cpp  CGCanvas.hpp  CMakeLists.txt  Readme.md  gpu.cpp  main.cpp  save.txt  see.txt
Assets/: bunny.blend  bunny.blend1  cornell_dragon.mtl  data.txt  scene.yaml  testPLane.mtl
CpuRayTracer/: CMakeLists.txt
CpuRayTracer/src/: aabbox.h  aabbox.hpp  camera.cpp  camera.h  camera.hpp  kdtree.cpp  kdtree.h  main.cpp  material.cpp  material.h  objects.cpp  objects.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  texture.cpp  texture.h  triangle.h  triangle.hpp  vector.h
GpuPathTracer/: BVH.cpp  BVH.hpp  BVHNode.cpp  BVHNode.hpp  BasicScene.cpp  BasicScene.hpp  CMakeLists.txt  CommomStructs.hpp  CpuStructs.hpp  CudaBVH.cpp  CudaBVH.cu  CudaBVH.hpp  Scene.cpp  Scene.hpp  SceneMesh.hpp  Sort.cpp  SplitBVHBuilder.cpp  SplitBVHBuilder.hpp  bvh_util.cpp  bvh_util.hpp  cudaUtils.cu  cudaUtils.cuh  cudaUtils.h  cutil_math.h  main.cpp  quad.frag  quad.vert  reference.cpp  tracer.cu  utilfun.cpp  utilfun.hpp
GpuPathTracer/App/: main.cpp
cmake_modules/: FindCUDA.cmake  FindOpenCV.cmake
src/: Camera.cpp  Camera.hpp  Plan.txt  Scene.cpp  Scene.hpp  main.cpp
src/Qt[Old]/: main.cpp
